--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -1,63 +1,62 @@
-<!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
-    <title>Contacto</title>
-  </head>
 
-  <body>
-      <h2>Complete los datos</h2>
-      <form action="">
-        <p>Datos de Contacto</p>
-        <label for="Nombre">Nombre :</label>
-        <input type="text" name="Nombre" id="Nombre" required /><br />
-        <label for="Apellido"> Apellido :</label>
-        <input type="text" name="Apellido" id="Apellido" required /><br />
-        <label for="">Email :</label>
-        <input type="email" name="" id="mail" required /><br />
-        <label for="bDate">Fecha de nacimiento</label>
-        <input type="date" name="bDate" id="bDate" required />
-        <p>Direccion</p>
-        <label for="Calle">Calle:</label>
-        <input type="text" name="Calle" id="Calle" required /><br />
-        <label for="Numero">Numero:</label>
-        <input type="number" name="Numero" id="Numero" required /><br />
-        <label for="Comuna">Comuna:</label>
-        <input type="text" name="Comuna" id="Comuna" required /><br />
-        <label for="Region">Region:</label>
-        <input type="text" name="Region" id="Region" required /><br />
-        <p>Seleccione su Genero</p>
-        <input type="radio" id="Masculino" name="Genero" value="Masculino" />
-        <label for="Masculino">Masculino</label>
-        <input type="radio" id="Femenino" name="Genero" value="Femenino" />
-        <label for="Femenino">Femenino</label>
-        <input type="radio" id="Otro" name="Genero" value="Otro" />
-        <label for="Otro">Otro</label>
-        <br />
-        <input type="checkbox" name="" id="" />
-        <label for="">Deseo recibir correos con anuncios de la pagina</label>
-        <br />
-        <input type="submit" value="Enviar" />
-      </form>
-      <hr />
-    <footer>
-      <img
-        src="../Recursos/Imagenes/LOGOCF.jpg"
-        alt="Problemas al cargar imagen"
-      />
-      <a href="../index.html">Inicio</a>
-      <a href="quieneSomos.html">¿Quienes somos?</a>
-      <a href="contacto.html">Contacto y sugerencias</a>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+    <!-- Mis Estilos -->
+  <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
+  <title>Contacto</title>
+</head>
+
+<body>
+  <h2>Complete los datos</h2>
+  <form action="">
+    <p>Datos de Contacto</p>
+    <label for="Nombre">Nombre :</label>
+    <input type="text" name="Nombre" id="Nombre" required /><br />
+    <label for="Apellido"> Apellido :</label>
+    <input type="text" name="Apellido" id="Apellido" required /><br />
+    <label for="">Email :</label>
+    <input type="email" name="" id="mail" required /><br />
+    <label for="bDate">Fecha de nacimiento</label>
+    <input type="date" name="bDate" id="bDate" required />
+    <p>Direccion</p>
+    <label for="Calle">Calle:</label>
+    <input type="text" name="Calle" id="Calle" required /><br />
+    <label for="Numero">Numero:</label>
+    <input type="number" name="Numero" id="Numero" required /><br />
+    <label for="Comuna">Comuna:</label>
+    <input type="text" name="Comuna" id="Comuna" required /><br />
+    <label for="Region">Region:</label>
+    <input type="text" name="Region" id="Region" required /><br />
+    <p>Seleccione su Genero</p>
+    <input type="radio" id="Masculino" name="Genero" value="Masculino" />
+    <label for="Masculino">Masculino</label>
+    <input type="radio" id="Femenino" name="Genero" value="Femenino" />
+    <label for="Femenino">Femenino</label>
+    <input type="radio" id="Otro" name="Genero" value="Otro" />
+    <label for="Otro">Otro</label>
+    <br />
+    <input type="checkbox" name="" id="" />
+    <label for="">Deseo recibir correos con anuncios de la pagina</label>
+    <br />
+    <input type="submit" value="Enviar" />
+  </form>
+  <hr />
+  <footer>
+    <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
+    <a href="../index.html">Inicio</a>
+    <a href="quieneSomos.html">¿Quienes somos?</a>
+    <a href="contacto.html">Contacto y sugerencias</a>
+  </footer>
+</body>
+
 </html>
