--- a/Paginas/mojito.html
+++ b/Paginas/mojito.html
@@ -5,109 +5,133 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- CSS only -->
-  <link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-  crossorigin="anonymous"
-/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- Mis Estilos -->
   <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
   <title>Mojito</title>
 </head>
 
 <body>
-  <div>
-    <h2>Mojito</h2>
+  <div class="container">
+    <nav class="navbar navbar-expand-sm">
+      <div class="container-fluid">
+        <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto y sugerencias</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div>
+      <h2>Mojito</h2>
 
-    <img src="../Recursos/Imagenes/Mojito.jpg" alt="Probl emas al cargar imagen">
+      <img src="../Recursos/Imagenes/Mojito.jpg" alt="Probl emas al cargar imagen">
 
-    <h3>Denominacion de origen</h3>
-    <p>
-      En la actualidad, solamente cuatro países tienen una denominación de origen para el ron en el Caribe, con nombres
-      distintos, pero un mismo fin. Estos países son: Cuba, Guatemala, Martinica y Venezuela.
-    </p>
-    <h3>Origen</h3>
-    <p>
-      Origen del mojito. Hablamos de Cuba
-      Cuba es sin duda alguna la cuna del mojito, a pesar de que el origen exacto de este cóctel clásico es siempre
-      objeto de debate. Una de las historias cuentan que el mojito se remonta al siglo XVI, se cree que sus raíces se
-      remontan incluso al año 1586, cuando un grupo de piratas lo llamaban «El Draque«, en honor al pirata inglés y
-      comerciante de esclavos Francis Drake.
-    </p>
-    <p>
-      Sea cual fuere el origen de su nombre, el mojito se hacía con tafia, un predecesor primitivo del ron, un
-      aguardiente de caña, usando los otros ingredientes para disimular su gusto áspero. No hay duda de que la bebida
-      mejoró sustancialmente durante el siglo XIX, con la introducción de alambiques de cobre y el proceso de
-      añejamiento que desembocó en la forma moderna del ron.
-    </p>
+      <h3>Denominacion de origen</h3>
+      <p>
+        En la actualidad, solamente cuatro países tienen una denominación de origen para el ron en el Caribe, con
+        nombres
+        distintos, pero un mismo fin. Estos países son: Cuba, Guatemala, Martinica y Venezuela.
+      </p>
+      <h3>Origen</h3>
+      <p>
+        Origen del mojito. Hablamos de Cuba
+        Cuba es sin duda alguna la cuna del mojito, a pesar de que el origen exacto de este cóctel clásico es siempre
+        objeto de debate. Una de las historias cuentan que el mojito se remonta al siglo XVI, se cree que sus raíces se
+        remontan incluso al año 1586, cuando un grupo de piratas lo llamaban «El Draque«, en honor al pirata inglés y
+        comerciante de esclavos Francis Drake.
+      </p>
+      <p>
+        Sea cual fuere el origen de su nombre, el mojito se hacía con tafia, un predecesor primitivo del ron, un
+        aguardiente de caña, usando los otros ingredientes para disimular su gusto áspero. No hay duda de que la bebida
+        mejoró sustancialmente durante el siglo XIX, con la introducción de alambiques de cobre y el proceso de
+        añejamiento que desembocó en la forma moderna del ron.
+      </p>
+    </div>
+    <div>
+      <table class="table table-bordered">
+        <tr>
+          <th>Receta</th>
+          <th>Destilado</th>
+          <th>Ingredientes</th>
+          <th>Cristaleria</th>
+          <th>Metodo</th>
+        </tr>
+        <td>Mojito</td>
+        <td>Ron</td>
+        <td>Limon sutil, Jarabe de goma</td>
+        <td>Copa flauta</td>
+        <td>Batido</td>
+      </table>
+    </div>
+    <div>
+      <h2>Ingredientes</h2>
+      <ul>
+        <li>2 Oz de Ron</li>
+        <li>1 Oz Jarabe de goma</li>
+        <li>1 Oz Limon</li>
+        <li>8 hoja de hierbabuena (2 ramas de mentas) </li>
+        <li>1/2 lima en rodajas o cuartos </li>
+        <li>Soda / agua con gas</li>
+        <li>Hielo frappe</li>
+      </ul>
+      <h2>Preparación</h2>
+      <ol>
+        <li>
+          Gran parte del secreto de un mojito es la hierbabuena o menta (la hierbabuena es un tipo de menta), aunque me
+          gusta más el sabor y aroma que le da la hierbabuena.
+        </li>
+        <li>
+          Durante la maceración ten cuidado y no destruyas las hojas, la idea es que se desprendan sus aromas y sus
+          esencias.
+        </li>
+        <li>
+          Ponemos azúcar al fondo del vaso. El vaso debe ser de cristal, tipo Collins o tipo Fizz.
+          Los mojitos se elaboran directamente sobre el vaso, sin necesidad de coctelera. Vertemos el zumo de la lima y
+          con la mano de mortero o con una cuchara de bar, diluimos el zumo con el azúcar.
+        </li>
+        <li>Damos unos pequeños golpecitos a las hojas de menta para que liberen su aroma y las majamos un poco con una
+          mano de mortero, apretándolas contra el azúcar en el fondo. No deben quedar totalmente rotas y machacadas,
+          porque entonces el mojito resulta desagradable de beber.</li>
+        <li>Añadimos los trozos de lima en el fondo del mojito y le damos unos toques de mortero para que libere un poco
+          su zumo. Estos trozos de lima le darán un toque más ácido y aún más aromático, pero se debe ser cuidadoso ya
+          que
+          para muchos puede ser demasiado ácido.</li>
+        <li>
+          Vertemos el ron y llenamos el vaso con hielo picado. Utilizar abundante hielo picado es la mejor opción pues
+          el
+          hielo ocupa mayores dimensiones en el vaso y lo hace más fresco. Rellenamos el cóctel con soda hasta
+          completar,
+          unas gotas de angostura (opcionales) y removemos con suavidad.
+        </li>
+        <li>
+          Nunca agregues bitter, ni ginger ale, limonada o tónica a la preparación, no estropees el mojito (sino
+          tuvieses
+          mejor que vaya sin soda). La soda enfriará el mojito más rápidamente. Decoramos con una rama de hierbabuena o
+          menta, una rodaja de lima y servimos con una pajita.
+        </li>
+      </ol>
+    </div>
+    <hr />
+    <footer>
+      <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
+      <a href="../index.html">Inicio</a>
+      <a href="quieneSomos.html">¿Quienes somos?</a>
+      <a href="contacto.html">Contacto y sugerencias</a>
+    </footer>
   </div>
-  <div>
-    <table id="tablaCoctel">
-      <tr>
-        <th>Receta</th>
-        <th>Destilado</th>
-        <th>Ingredientes</th>
-        <th>Cristaleria</th>
-        <th>Metodo</th>
-      </tr>
-      <td>Mojito</td>
-      <td>Ron</td>
-      <td>Limon sutil, Jarabe de goma</td>
-      <td>Copa flauta</td>
-      <td>Batido</td>
-    </table>
-  </div>
-  <div>
-    <h2>Ingredientes</h2>
-    <ul>
-      <li>2 Oz de Ron</li>
-      <li>1 Oz Jarabe de goma</li>
-      <li>1 Oz Limon</li>
-      <li>8 hoja de hierbabuena (2 ramas de mentas) </li>
-      <li>1/2 lima en rodajas o cuartos </li>
-      <li>Soda / agua con gas</li>
-      <li>Hielo frappe</li>
-    </ul>
-    <h2>Preparación</h2>
-    <ol>
-      <li>
-        Gran parte del secreto de un mojito es la hierbabuena o menta (la hierbabuena es un tipo de menta), aunque me
-        gusta más el sabor y aroma que le da la hierbabuena.
-      </li>
-      <li>
-        Durante la maceración ten cuidado y no destruyas las hojas, la idea es que se desprendan sus aromas y sus
-        esencias.
-      </li>
-      <li>
-        Ponemos azúcar al fondo del vaso. El vaso debe ser de cristal, tipo Collins o tipo Fizz.
-        Los mojitos se elaboran directamente sobre el vaso, sin necesidad de coctelera. Vertemos el zumo de la lima y
-        con la mano de mortero o con una cuchara de bar, diluimos el zumo con el azúcar.
-      </li>
-      <li>Damos unos pequeños golpecitos a las hojas de menta para que liberen su aroma y las majamos un poco con una
-        mano de mortero, apretándolas contra el azúcar en el fondo. No deben quedar totalmente rotas y machacadas,
-        porque entonces el mojito resulta desagradable de beber.</li>
-      <li>Añadimos los trozos de lima en el fondo del mojito y le damos unos toques de mortero para que libere un poco
-        su zumo. Estos trozos de lima le darán un toque más ácido y aún más aromático, pero se debe ser cuidadoso ya que
-        para muchos puede ser demasiado ácido.</li>
-      <li>
-        Vertemos el ron y llenamos el vaso con hielo picado. Utilizar abundante hielo picado es la mejor opción pues el
-        hielo ocupa mayores dimensiones en el vaso y lo hace más fresco. Rellenamos el cóctel con soda hasta completar,
-        unas gotas de angostura (opcionales) y removemos con suavidad.
-      </li>
-      <li>
-        Nunca agregues bitter, ni ginger ale, limonada o tónica a la preparación, no estropees el mojito (sino tuvieses
-        mejor que vaya sin soda). La soda enfriará el mojito más rápidamente. Decoramos con una rama de hierbabuena o
-        menta, una rodaja de lima y servimos con una pajita.
-      </li>
-    </ol>
-  </div>
-  <hr />
-  <footer>
-    <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
-    <a href="../index.html">Inicio</a>
-    <a href="quieneSomos.html">¿Quienes somos?</a>
-    <a href="contacto.html">Contacto y sugerencias</a>
-  </footer>
 </body>
 
 </html>
