--- a/Paginas/piscoSour.html
+++ b/Paginas/piscoSour.html
@@ -5,76 +5,106 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- CSS only -->
-  <link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-  crossorigin="anonymous"
-/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- Mis Estilos -->
   <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
   <title>Pisco Sour</title>
 </head>
 
 <body>
-  <div>
-    <h2>Pisco Sour</h2>
-
-    <h3>Denominacion de origen</h3>
-    <p>
-      El pisco es un aguardiente de uva, elaborado en las regiones de Atacama
-      y Coquimbo, en Chile. Fue delimitado como Denominación de Origen en 1931
-      y representa la más exitosa DO del Cono Sur de América, con positivos
-      efectos sociales y territoriales.
-    </p>
+  <div class="container">
+    <nav class="navbar navbar-expand-sm">
+      <div class="container-fluid">
+        <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto y sugerencias</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div>
+      <h2>Pisco Sour</h2>
+      <h3>Denominacion de origen</h3>
+      <p>
+        El pisco es un aguardiente de uva, elaborado en las regiones de Atacama
+        y Coquimbo, en Chile. Fue delimitado como Denominación de Origen en 1931
+        y representa la más exitosa Denominacion de origen del Cono Sur de América, con positivos
+        efectos sociales y territoriales.
+      </p>
+    </div>
+    <div>
+      <table class="table table-bordered">
+        <tr>
+          <th>Receta</th>
+          <th>Destilado</th>
+          <th>Ingredientes</th>
+          <th>Cristaleria</th>
+          <th>Metodo</th>
+        </tr>
+        <td>Pisco Sour</td>
+        <td>Pisco</td>
+        <td>Limon sutil, Jarabe de goma</td>
+        <td>Copa flauta</td>
+        <td>Batido</td>
+      </table>
+    </div>
+    <div>
+      <h2>Ingredientes</h2>
+      <ul>
+        <li>3 Oz de Pisco</li>
+        <li>1 Oz Jarabe de goma</li>
+        <li>1 Oz Limon</li>
+        <li>Cubos de hielo</li>
+        <li>Coctelera</li>
+      </ul>
+      <h2>preparación en coctelera</h2>
+      <ol>
+        <li>
+          En la coctelera agregar los primeros cinco ingredientes y mezclar de
+          15 a 20 segundos.
+        </li>
+        <li>
+          Servir pausadamente en una copa, de modo de alcanzar solamente un dedo
+          de espuma.
+        </li>
+        <li>
+          Agregar las gotitas de angostura, las cuales ayudarán a balancear el
+          sabor refrescante y la acidez del coctel.
+        </li>
+      </ol>
+    </div>
+    <hr />
+    <footer>
+      <nav class="navbar navbar-expand-sm">
+        <div class="container-fluid">
+          <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto y sugerencias</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </footer>
   </div>
-  <div>
-    <table id="tablaCoctel">
-      <tr>
-        <th>Receta</th>
-        <th>Destilado</th>
-        <th>Ingredientes</th>
-        <th>Cristaleria</th>
-        <th>Metodo</th>
-      </tr>
-      <td>Pisco Sour</td>
-      <td>Pisco</td>
-      <td>Limon sutil, Jarabe de goma</td>
-      <td>Copa flauta</td>
-      <td>Batido</td>
-    </table>
-  </div>
-  <div>
-    <h2>Ingredientes</h2>
-    <ul>
-      <li>3 Oz de Pisco</li>
-      <li>1 Oz Jarabe de goma</li>
-      <li>1 Oz Limon</li>
-      <li>Cubos de hielo</li>
-      <li>Coctelera</li>
-    </ul>
-    <h2>preparación en coctelera</h2>
-    <ol>
-      <li>
-        En la coctelera agregar los primeros cinco ingredientes y mezclar de
-        15 a 20 segundos.
-      </li>
-      <li>
-        Servir pausadamente en una copa, de modo de alcanzar solamente un dedo
-        de espuma.
-      </li>
-      <li>
-        Agregar las gotitas de angostura, las cuales ayudarán a balancear el
-        sabor refrescante y la acidez del coctel.
-      </li>
-    </ol>
-  </div>
-  <hr />
-  <footer>
-    <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
-    <a href="../index.html">Inicio</a>
-    <a href="quieneSomos.html">¿Quienes somos?</a>
-    <a href="contacto.html">Contacto y sugerencias</a>
-  </footer>
 </body>
 
 </html>
