--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -1,28 +1,31 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
-    <title>¿Quienes somos?</title>
-</head>
-<body>
-    <h1>¿Quienes somos?</h1>
 
-    <p></p>
-    <footer>
-        <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
-        <a href="../index.html">Inicio</a>
-        <a href="quieneSomos.html">¿Quienes somos?</a>
-        <a href="contacto.html">Contacto y sugerencias</a>
-      </footer>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- Mis Estilos -->
+  <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
+  <title>¿Quienes somos?</title>
+</head>
+
+<body>
+  <h1>¿Quienes somos?</h1>
+
+  <p></p>
+  <footer>
+    <img src="../Recursos/Imagenes/LOGOCF.jpg" alt="Problemas al cargar imagen" />
+    <a href="../index.html">Inicio</a>
+    <a href="quieneSomos.html">¿Quienes somos?</a>
+    <a href="contacto.html">Contacto y sugerencias</a>
+  </footer>
 </body>
+
 </html>
