--- a/index.html
+++ b/index.html
@@ -1,161 +1,206 @@
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="Recursos/Elementos/Estilos.css" />
-    <title>Cocktail Factory</title>
-  </head>
-  <!--
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- Mis Estilos -->
+  <link rel="stylesheet" href="Recursos/Elementos/Estilos.css" />
+  <title>Cocktail Factory</title>
+</head>
+<!--
     Notas mentales
 -->
 
-  <body>
+<body>
+
+  <div class="container">
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
-        <!-- Links -->
-        <img
-          src="Recursos/Imagenes/BANNERCF.png"
-          alt="Problemas al cargar imagen"
-          width="400"
-        />
+        <img src="Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Inicio</a>
+            <a class="nav-link" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Paginas/quieneSomos.html"
-              >¿Quienes somos?</a
-            >
+            <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Paginas/contacto.html"
-              >Contacto y sugerencias</a
-            >
+            <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
           </li>
         </ul>
       </div>
     </nav>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <h1>Nuestro proposito</h1>
-          <p>
-            Con nosotros aprenderas los terminos que se usan detras de la barra
-            y ademas aprenderas a preparar cocteles basicos y avanzados.
-          </p>
-          <h2>El bartender</h2>
-          <p>
-            -Un bartender es un profesional de la barra, sabe de coctelería,
-            administración de la barra, servicio al cliente y crea experiencias
-            con las bebidas que realiza.
-          </p>
-          <p>
-            -Es una persona que atiende detrás de la barra a los clientes en un
-            hotel, crucero, antro, discoteca y otros lugares con bar.
-          </p>
-          <p>
-            -El bartender es un concepto más moderno que involucra más servicio
-            al cliente, una mejor atención detrás de la barra.
-          </p>
-          <p>
-            -También es diferente a un mixólogo, que es un químico de la barra,
-            un diseñador de bebidas. El mixólogo experimenta más, diseña nuevos
-            tragos.
-          </p>
-          <p>
-            -Algunos mixólogos son bartenders. Digamos que la mixología es una
-            especialización de la profesión de bartender. Como un dermatólogo es
-            una especialidad médica, la mixología es una especialidad de un
-            bartender.
-          </p>
-        </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <h1>Nuestro proposito</h1>
+        <p>
+          Con nosotros aprenderas los terminos que se usan detras de la barra
+          y ademas aprenderas a preparar cocteles basicos y avanzados.
+        </p>
+        <h2>El bartender</h2>
+        <p>
+          -Un bartender es un profesional de la barra, sabe de coctelería,
+          administración de la barra, servicio al cliente y crea experiencias
+          con las bebidas que realiza.
+        </p>
+        <p>
+          -Es una persona que atiende detrás de la barra a los clientes en un
+          hotel, crucero, antro, discoteca y otros lugares con bar.
+        </p>
+        <p>
+          -El bartender es un concepto más moderno que involucra más servicio
+          al cliente, una mejor atención detrás de la barra.
+        </p>
+        <p>
+          -También es diferente a un mixólogo, que es un químico de la barra,
+          un diseñador de bebidas. El mixólogo experimenta más, diseña nuevos
+          tragos.
+        </p>
+        <p>
+          -Algunos mixólogos son bartenders. Digamos que la mixología es una
+          especialización de la profesión de bartender. Como un dermatólogo es
+          una especialidad médica, la mixología es una especialidad de un
+          bartender.
+        </p>
+      </div>
 
-        <div class="col-sm-6">
-          <img
-            class="img-fluid"
-            src="/Recursos/Imagenes/Barman.jpg"
-            alt="Barman"
-          />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <img
-            class="img-fluid"
-            src="/Recursos/Imagenes/mixologia.jpg"
-            alt="mixologia"
-          />
-        </div>
-        <div class="col-sm-6">
-          <h2>¿Que es la mixología?</h2>
-          <p>
-            La mixología se volvió un término utilizado más comúnmente en los
-            últimos años y generalmente utilizado en un grado más alto del
-            estudio de mezclar cocteles y bebidas, que simplemente el hacer las
-            acciones diarias de un bartender.
-          </p>
-          <p>
-            Esta definición y su uso es uno de los muchos debates dentro de la
-            comunidad de bartenders, usualmente por la impresión que deja que un
-            mixólogo es mejor y más habilidoso que el bartender. Sin embargo,
-            esto no es necesario. Ni es mejor que el otro y cada uno requiere de
-            diferentes técnicas y habilidades.
-          </p>
-        </div>
+      <div class="col-sm-6">
+        <img class="img-fluid" src="/Recursos/Imagenes/Barman.jpg" alt="Barman" />
       </div>
     </div>
-    <div>
-      <h2>¿Qué es un coctel?</h2>
-      <p>
-        Un cóctel o coctel (del inglés cocktail)​ es una preparación a base
-        de una mezcla de diferentes bebidas, que contiene por lo general dos
-        o más tipos de bebidas, aunque algunas de ellas pueden ser bebidas
-        no alcohólicas, a base de ingredientes como jugos, frutas, miel,
-        leche o crema, especias, etc. También son ingredientes comunes de
-        los cócteles las bebidas carbonatadas o refrescos sin alcohol, la
-        soda y el agua tónica. Los cócteles sin alcohol son popularmente
-        llamados cócteles virgen o mócteles. En el ámbito comercial, estas
-        bebidas son servidas por personas llamadas barman (del inglés
-        bartender).
-      </p>
+    <div class="row">
+      <div class="col-sm-6">
+        <img class="img-fluid" src="/Recursos/Imagenes/mixologia.jpg" alt="mixologia" />
+      </div>
+      <div class="col-sm-6">
+        <h2>¿Que es la mixología?</h2>
+        <p>
+          La mixología se volvió un término utilizado más comúnmente en los
+          últimos años y generalmente utilizado en un grado más alto del
+          estudio de mezclar cocteles y bebidas, que simplemente el hacer las
+          acciones diarias de un bartender.
+        </p>
+        <p>
+          Esta definición y su uso es uno de los muchos debates dentro de la
+          comunidad de bartenders, usualmente por la impresión que deja que un
+          mixólogo es mejor y más habilidoso que el bartender. Sin embargo,
+          esto no es necesario. Ni es mejor que el otro y cada uno requiere de
+          diferentes técnicas y habilidades.
+        </p>
+      </div>
+      <div>
+        <h2>¿Qué es un coctel?</h2>
+        <p>
+          Un cóctel o coctel (del inglés cocktail)​ es una preparación a base
+          de una mezcla de diferentes bebidas, que contiene por lo general dos
+          o más tipos de bebidas, aunque algunas de ellas pueden ser bebidas
+          no alcohólicas, a base de ingredientes como jugos, frutas, miel,
+          leche o crema, especias, etc. También son ingredientes comunes de
+          los cócteles las bebidas carbonatadas o refrescos sin alcohol, la
+          soda y el agua tónica. Los cócteles sin alcohol son popularmente
+          llamados cócteles virgen o mócteles. En el ámbito comercial, estas
+          bebidas son servidas por personas llamadas barman (del inglés
+          bartender).
+        </p>
+      </div>
+      <!--Cards-->
+      <div class="row py-3">
+        <div class="col-4">
+          <div class="card" style="width:400px">
+            <h5>Preparaciones con Pisco</h5>
+            <div class="card-body">
+              <ul class="list-group">
+                <li><a href="Paginas/PiscoSour.html">Pisco</a></li>
+                <li>Pisco Sour Peruano</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width:400px">
+            <h5>Preparaciones con Whisky</h5>
+            <div class="card-body">
+              <ul class="list-group">
+
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width:400px">
+            <h5>Preparaciones con Vodka</h5>
+            <div class="card-body">
+              <ul class="list-group">
+
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row py-3">
+        <div class="col-4">
+          <div class="card" style="width:400px">
+            <h5>Preparaciones con Ron</h5>
+            <div class="card-body">
+              <ul class="list-group">
+                <li><a href="Paginas/mojito.html">Mojito</a></li>
+                <li>Caipirina</li>
+                <li>Piña colada</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width:400px">
+            <h5>Preparaciones con Ginebra</h5>
+            <div class="card-body">
+              <ul class="list-group">
+                <li>Martini</li>
+                <li>Margarita</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width:400px">
+            <h5>Preparaciones con Tequila</h5>
+            <div class="card-body">
+              <ul class="list-group">
+
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <nav class="navbar navbar-expand-sm">
+          <div class="container-fluid">
+            <img src="Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </footer>
     </div>
-    <div>
-      <h2>Cocteles para preparar</h2>
-      <ul class="list-group">
-        <li><a href="Paginas/PiscoSour.html">Pisco</a></li>
-        <li><a href="Paginas/mojito.html">Mojito</a></li>
-        <li>Pisco Sour Peruano</li>
-        <li>Margarita</li>
-        <li>Martini</li>
-        <li>Caipirina</li>
-        <li>Vaina</li>
-        <li>Piña colada</li>
-      </ul>
-    </div>
-    <hr />
-    <footer>
-      <img
-        src="Recursos/Imagenes/BANNERCF.png"
-        alt="Problemas al cargar imagen"
-        width="400"
-      />
-      <a href="index.html">Inicio</a>
-      <a href="Paginas/quieneSomos.html">¿Quienes somos?</a>
-      <a href="Paginas/contacto.html">Contacto y sugerencias</a>
-    </footer>
-  </body>
+  </div>
+</body>
+
 </html>
